[gd_scene load_steps=3 format=3 uid="uid://c47f4bddmrxyn"]

[ext_resource type="Script" uid="uid://dkpvqy50qar7x" path="res://source/enemy_detection_area_2d.gd" id="1_s07bk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ah1pl"]
radius = 100.0

[node name="EnemyDetectionArea2D" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_s07bk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 3.5)
shape = SubResource("CircleShape2D_ah1pl")
debug_color = Color(0.941486, 0.723186, 7.70092e-07, 0.41960785)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
